--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
         <a class="brand-link w-nav-brand" href="/">
-          <h1 class="logo">METHOD</h1>
+          <h1 class="logo">WTF Is Chinese Downhill</h1>
         </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/bio">Band</a>
@@ -24,8 +24,8 @@
       </div>
     </div>
     <div class="hero-container w-container">
-      <div class="hero-subtitle">We just released our new album</div>
-      <h1 class="hero-heading">EQUILIBRIUM</h1>
+      <div class="hero-subtitle">A band by skiers for skiers!!</div>
+      <h1 class="hero-heading">Chinese Downhill</h1>
       <a class="big button w-button" href="/music">Check it out</a>
       <a class="big button w-button" href="/tour">Watch us live</a>
     </div>
