--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
         <a class="brand-link w-nav-brand" href="/">
-          <h1 class="logo">WTF Is Chinese Downhill</h1>
+          <h1 class="logo">WTF Is Chinese Downhill?</h1>
         </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/bio">Band</a>
