Background size contain,

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="hero" style="background-image: url('./images/ChineseDownhill.jpg')">
+  <div class="hero" style="background-image: url('./images/ChineseDownhill.jpg'); background-size: contain;">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
         <a class="brand-link w-nav-brand" href="/">
