Adding under construction page.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
   <div class="hero" style="background-image: url('./images/ChineseDownhill.jpg'); background-size: cover;">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
-        <a class="brand-link w-nav-brand" href="https://youtu.be/6EXQ2rIpM6E?t=11">
+        <a class="brand-link w-nav-brand" href="https://youtu.be/6EXQ2rIpM6E?t=11" target="_blank">
           <h1 class="logo">WTF Is Chinese Downhill?</h1>
         </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
-          <a class="nav-link w-nav-link" href="/bio">Band</a>
-          <a class="nav-link w-nav-link" href="/music">Music</a>
-          <a class="nav-link w-nav-link" href="/tour">Tour</a>
-          <a class="nav-link w-nav-link" href="/gallery">Gallery</a>
-          <a class="nav-link w-nav-link" href="/contact">Contact</a>
+          <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
+          <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
+          <a class="nav-link w-nav-link" href="/under-construction.html">Tour</a>
+          <a class="nav-link w-nav-link" href="/under-construction.html">Gallery</a>
+          <a class="nav-link w-nav-link" href="/under-construction.html">Contact</a>
         </nav>
         <div class="menu-button w-clearfix w-nav-button">
           <div class="menu-text">MENU</div>
