--- a/upcoming-shows.html
+++ b/upcoming-shows.html
@@ -15,12 +15,9 @@
 <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="hero" style="background-image: url('./images/ChineseDownhill.jpg'); background-size: cover;">
+  <div class="hero">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
-        <a class="brand-link w-nav-brand" href="https://youtu.be/6EXQ2rIpM6E?t=11" target="_blank">
-          <h1 class="logo">WTF Is Chinese Downhill?</h1>
-        </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
@@ -34,12 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="hero-container w-container">
-      <div class="hero-subtitle">A band by skiers for skiers!!</div>
-      <h1 class="hero-heading">Chinese Downhill</h1>
-      <a class="big button w-button" href="/music">Check it out</a>
-      <a class="big button w-button" href="/tour">Watch us live</a>
-    </div>
+    <img src="./images/cd-sept-1st-promo.jpg" style="margin-left: auto; margin-right: auto; display:block; height: 95%;"/>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 <script src="https://daks2k3a4ib2z.cloudfront.net/560eb94ab52962bd77dfcf14/js/webflow.57f4ffb2a.js" type="text/javascript"></script>
