--- a/upcoming-shows.html
+++ b/upcoming-shows.html
@@ -19,6 +19,7 @@
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
         <nav class="nav-menu w-nav-menu" role="navigation">
+          <a class="nav-link w-nav-link" href="/index.html">Home</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
           <a class="nav-link w-nav-link" href="/upcoming-shows.html">Upcoming Shows</a>
