--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="hero-container w-container">
       <div class="hero-subtitle">A band by skiers for skiers!!</div>
       <h1 class="hero-heading">Chinese Downhill</h1>
-      <a class="big button w-button" href="/music">Check it out</a>
-      <a class="big button w-button" href="/tour">Watch us live</a>
+      <a class="big button w-button" href="https://www.youtube.com/shorts/FypUwc4Aqd4" target="_blank">Check it out</a>
+      <a class="big button w-button" href="./upcoming-shows.html">Watch us live</a>
     </div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
