--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
           <h1 class="logo">WTF Is Chinese Downhill?</h1>
         </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
+          <a class="nav-link w-nav-link" href="/index.html">Home</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
           <a class="nav-link w-nav-link" href="/upcoming-shows.html">Upcoming Shows</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Gallery</a>
-          <a class="nav-link w-nav-link" href="/under-construction.html">Contact</a>
+          <a class="nav-link w-nav-link" href="/contact.html">Contact</a>
         </nav>
         <div class="menu-button w-clearfix w-nav-button">
           <div class="menu-text">MENU</div>
