--- a/under-construction.html
+++ b/under-construction.html
@@ -15,7 +15,7 @@
 <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="hero" style="background-image: url('./images/ChineseDownhill.jpg'); background-size: cover;">
+  <div class="hero" style="background-image: url('./images/ChineseDownhill-background.jpg'); background-size: cover;">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
         <a class="brand-link w-nav-brand" href="https://youtu.be/6EXQ2rIpM6E?t=11" target="_blank">
