--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/index.html">Home</a>
-          <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
+          <a class="nav-link w-nav-link" href="/bio.html">Band</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
           <a class="nav-link w-nav-link" href="/upcoming-shows.html">Upcoming Shows</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Gallery</a>
