--- a/upcoming-shows.html
+++ b/upcoming-shows.html
@@ -20,7 +20,7 @@
       <div class="w-container">
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/index.html">Home</a>
-          <a class="nav-link w-nav-link" href="/under-construction.html">Band</a>
+          <a class="nav-link w-nav-link" href="/bio.html">Band</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
           <a class="nav-link w-nav-link" href="/upcoming-shows.html">Upcoming Shows</a>
           <a class="nav-link w-nav-link" href="/under-construction.html">Gallery</a>
