--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <nav class="nav-menu w-nav-menu" role="navigation">
           <a class="nav-link w-nav-link" href="/index.html">Home</a>
           <a class="nav-link w-nav-link" href="/bio.html">Band</a>
-          <a class="nav-link w-nav-link" href="/under-construction.html">Music</a>
           <a class="nav-link w-nav-link" href="/upcoming-shows.html">Upcoming Shows</a>
-          <a class="nav-link w-nav-link" href="/under-construction.html">Gallery</a>
+          <a class="nav-link w-nav-link" href="/gallery.html">Gallery</a>
           <a class="nav-link w-nav-link" href="/contact.html">Contact</a>
         </nav>
         <div class="menu-button w-clearfix w-nav-button">
