--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
       <title>Chinese Downhill</title>
       <meta content="width=device-width, initial-scale=1" name="viewport"/>
       <link href="https://uploads-ssl.webflow.com/64f65a730acbfc277d07e1b7/css/michaels-groovy-site-b9d11e.webflow.04ba35fe6.css" rel="stylesheet" type="text/css"/>
+      <link href="./css/main.css" rel="stylesheet" type="text/css">
       <link href="https://fonts.googleapis.com" rel="preconnect"/>
       <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"/>
       <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,500","Roboto Slab:regular"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
@@ -14,9 +15,6 @@
    <body class="subpage-background">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav-bar w-nav">
          <div class="w-container">
-            <a class="brand-link w-nav-brand" href="https://youtu.be/6EXQ2rIpM6E?t=11" target="_blank">
-                <h1 class="logo">WTF Is Chinese Downhill?</h1>
-            </a>
             <nav class="nav-menu w-nav-menu" role="navigation">
                 <a class="nav-link w-nav-link" href="/index.html">Home</a>
                 <a class="nav-link w-nav-link" href="/bio.html">Band</a>
