--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
                   <img alt="" src="./images/Steezy.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Steezy.jpg 500w, ./images/Steezy.jpg 500w" class="photo"/>
-                  <div class="small-grey-text">On bass - Steezy Joe</div>
+                  <div class="small-grey-text">On bass - Parker Esty</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
                   <img alt="" src="./images/Sulli.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Sulli.jpg 500w, ./images/Sulli.jpg 500w" class="photo"/>
