--- a/gallery.html
+++ b/gallery.html
@@ -41,16 +41,16 @@
                   <div class="small-grey-text">Lead singer and guitar - Dylan Walczyk</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Steezy.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Steezy.jpg 500w, ./images/Steezy.jpg 500w" class="photo"/>
+                  <img alt="" src="./images/Parker.jpeg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Steezy.jpg 500w, ./images/Steezy.jpg 500w" class="photo"/>
                   <div class="small-grey-text">On bass - Parker Esty</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
                   <img alt="" src="./images/Sulli.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Sulli.jpg 500w, ./images/Sulli.jpg 500w" class="photo"/>
-                  <div class="small-grey-text">On drums - Sulli Harris!!</div>
+                  <div class="small-grey-text">On drums - Jonny Too Bad</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Diego.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Diego.jpg 500w, ./images/Diego.jpg 500w" class="photo"/>
-                  <div class="small-grey-text">On keys - Diego Espinoza</div>
+                  <img alt="" src="./images/Steezy.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Diego.jpg 500w, ./images/Diego.jpg 500w" class="photo"/>
+                  <div class="small-grey-text">On keys - Michael</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
                 <img alt="" src="./images/U5A7009.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/U5A7009.jpg 500w, ./images/U5A7009.jpg 500w" class="photo"/>
