--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                   <div class="small-grey-text">On bass - Parker Esty</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Sulli.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Sulli.jpg 500w, ./images/Sulli.jpg 500w" class="photo"/>
+                  <img alt="" src="./images/Jonny.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Sulli.jpg 500w, ./images/Sulli.jpg 500w" class="photo"/>
                   <div class="small-grey-text">On drums - Jonny Too Bad</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
