--- a/gallery.html
+++ b/gallery.html
@@ -40,15 +40,15 @@
                   <div class="small-grey-text">Lead singer and guitar - Dylan Walczyk</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Parker.jpeg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Steezy.jpg 500w, ./images/Steezy.jpg 500w" class="photo"/>
+                  <img alt="" src="./images/Parker.jpeg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Parker.jpeg 500w, ./images/Parker.jpeg 500w" class="photo"/>
                   <div class="small-grey-text">On bass - Parker Esty</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Jonny.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Sulli.jpg 500w, ./images/Sulli.jpg 500w" class="photo"/>
+                  <img alt="" src="./images/Jonny.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Jonny.jpg 500w, ./images/Jonny.jpg 500w" class="photo"/>
                   <div class="small-grey-text">On drums - Jonny Too Bad</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
-                  <img alt="" src="./images/Steezy.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Diego.jpg 500w, ./images/Diego.jpg 500w" class="photo"/>
+                  <img alt="" src="./images/Steezy.jpg" sizes="(max-width: 767px) 80vw, (max-width: 991px) 582.390625px, 752px" srcset="./images/Steezy.jpg 500w, ./images/Steezy.jpg 500w" class="photo"/>
                   <div class="small-grey-text">On keys - Michael</div>
                </div>
                <div role="listitem" class="photo-list w-dyn-item">
